Entire website reviewed, background changed, font changed, navbar with flags improved, images compressed, contents and texts added, animations improved, mobile version improved,...

--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CExo">
 
     <link rel="stylesheet" href="css/master.css">
 
@@ -29,7 +29,7 @@
 
         .errorText
         {
-            font-family: "Quattrocento Sans";
+            font-family: "Exo";
             color: blue;
             background-color: rgba(255, 255, 255, 0.8);
             opacity: ;
@@ -51,7 +51,9 @@
             </div>
             <div class="row">
                 <div class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6 col-xs-offset-2 col-xs-8">
-                <img class="img-responsive" src="images/404Image.jpg" alt="Error 404 image">
+                <a href="fr/index.html">
+                    <img class="img-responsive" src="images/404Image.jpg" alt="Error 404 image">
+                </a>
                 </div>
             </div>
         </div>
