--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CExo">
 
     <link rel="stylesheet" href="css/master.css">
 
@@ -40,9 +40,7 @@
             <div class="navbar-header">
                 <button type="button" id="navbarBg" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
-                    <span class="barColor icon-bar"></span>
-                    <span class="barColor icon-bar"></span>
-                    <span class="barColor icon-bar"></span>
+                    Menu
                 </button>
                 <a class="navbar-brand brandName" href="index.html">Thierry</a>
             </div>
@@ -53,10 +51,13 @@
                     <li><a href="skills.html">Skills</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li class="active"><a href="contact.html">Contact</a></li>
-                    <a href="fr/index.html"><img class="flag" alt="French Flag" src="images/FrFlag.png"></a>
-                    <div class="div-7"></div>
-                    <a href="index.html"><img class="flag1" alt="English Flag" src="images/EngFlag.png"></a>
+                    <li class="active"><a id="active" href="contact.html">Contact</a></li>
+                    <li>
+                        <a href="fr/index.html"><img class="flag" alt="French Flag" src="images/FrFlag.png"><span class="hidden-sm hidden-md hidden-lg"> Français</span></a>
+                    </li>
+                    <li>
+                        <a href="index.html"><img class="flag1" alt="English Flag" src="images/EngFlag.png"> <span class="hidden-sm hidden-md hidden-lg">English</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -74,6 +75,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-offset-1 col-sm-11">
+                <p><i class="smile fa fa-smile-o" aria-hidden="true"></i> Thank you for visiting. <i class="smile fa fa-smile-o" aria-hidden="true"></i></p>
                 <p><i class="fa fa-thumbs-up thumbs" aria-hidden="true"></i> You like my work?</p>
                 <p>Available immediately in Lyon.</p>
                 <p>Contact me if you want to hire me or just say hi!</p>
@@ -104,6 +106,7 @@
                 </div>
             </div>
         </div>
+        <div class="div20"></div>
     </section>
 
     <footer>
