--- a/fr/skills.html
+++ b/fr/skills.html
@@ -10,12 +10,12 @@
     <meta name="author" content="Thierry HOR">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CExo">
 
     <link rel="stylesheet" href="../css/master.css">
 
@@ -106,9 +106,7 @@
             <div class="navbar-header">
                 <button type="button" id="navbarBg" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
-                    <span class="barColor icon-bar"></span>
-                    <span class="barColor icon-bar"></span>
-                    <span class="barColor icon-bar"></span>
+                    Menu
                 </button>
                 <a class="navbar-brand brandName" href="index.html">Thierry</a>
             </div>
@@ -116,13 +114,16 @@
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Acceuil</a></li>
-                    <li class="active"><a href="skills.html">Compétences</a></li>
+                    <li class="active"><a id="active" href="skills.html">Compétences</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">Qui Suis-Je</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="index.html"><img class="flag" alt="Drapeau Français" src="../images/FrFlag.png"></a>
-                    <div class="div-7"></div>
-                    <a href="../index.html"><img class="flag1" alt="Drapeau Anglais" src="../images/EngFlag.png"></a>
+                    <li>
+                        <a href="index.html"><img class="flag" alt="Drapeau Français" src="../images/FrFlag.png"><span class="hidden-sm hidden-md hidden-lg"> Français</span></a>
+                    </li>
+                    <li>
+                        <a href="../index.html"><img class="flag1" alt="Drapeau Anglais" src="../images/EngFlag.png"> <span class="hidden-sm hidden-md hidden-lg"> English</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -138,7 +139,7 @@
         </div>
 
         <div class="container">
-            <h3>Dévelopement Web: </h3>
+            <h3 class="title2">Dévelopement Web:</h3>
             <div class="row">
                 <div class="col-md-4 col-sm-6 text-center">
                     <img class="imgHtml skills animSkill" src="../images/html5css3.png" alt="Skill HTML5 & CSS3">
@@ -193,16 +194,17 @@
                     </div>
                 </div>
             </div>
-            <h3>Langues: </h3>
+            <h3 class="title2">Langues:</h3>
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <p>Français:
                     <br>Anglais:
-                    <br>Cambodgien (Khmer):
+                    <br>Cambodgien:
                     </p>
                 </div>
-                <div class="col-sm-9">
-                    <i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i>
+                <div class="col-sm-10">
+                    <i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i>
+                    <p class="textLang">Trilingue</p>
                 </div>
             </div>
             <div class="row">
@@ -211,7 +213,9 @@
                 </div>
             </div>
         </div>
+        <div class="div20"></div>
     </section>
+
     <footer>
     	<div class="container">
     		<div class="row">
@@ -220,8 +224,8 @@
     			</div>
     			<div class="col-xs-6 socialCol">
     				<ul class="list-inline copyright">
-    					<li><a href="http://fr.linkedin.com/in/horthierry/fr" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
-    					<li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
+    					<li><a href="https://fr.linkedin.com/in/horthierry/fr/" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+    					<li><a href="https://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
     					<li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
     				</ul>
     			</div>
