--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CExo">
 
     <link rel="stylesheet" href="css/master.css">
 
@@ -55,6 +55,11 @@
         font-size: 1.2em;
     }
 
+    .text1, .text2, .text3
+    {
+        color: #3BB9FF;
+    }
+
     .text3
     {
         -moz-animation:animImg 3s linear;
@@ -74,23 +79,24 @@
             <div class="navbar-header">
               <button type="button" id="navbarBg" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
-                <span class="barColor icon-bar"></span>
-                <span class="barColor icon-bar"></span>
-                <span class="barColor icon-bar"></span>
+                Menu
               </button>
               <a class="navbar-brand brandName" href="index.html">Thierry</a>
             </div>
 
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a id="active" href="index.html">Home</a></li>
                     <li><a href="skills.html">Skills</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="fr/index.html"><img class="flag" alt="French Flag" src="images/FrFlag.png"></a>
-                    <div class="div-7"></div>
-                    <a href="index.html"><img class="flag1" alt="English Flag" src="images/EngFlag.png"></a>
+                    <li>
+                        <a href="fr/index.html"><img class="flag" alt="French Flag" src="images/FrFlag.png"><span class="hidden-sm hidden-md hidden-lg"> Français</span></a>
+                    </li>
+                    <li>
+                        <a href="index.html"><img class="flag1" alt="English Flag" src="images/EngFlag.png"> <span class="hidden-sm hidden-md hidden-lg">English</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -106,21 +112,21 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                <h1 class="textCenter">Thierry HOR</h1>
-                <h2 class="textCenter">Full-Stack Web Developer</h2>
+                <h1 class="textCenter title2"><strong>Thierry HOR</strong></h1>
+                <h2 class="textCenter title2"><strong>Full-Stack Web Developer</strong></h2>
 
                 <div class="col-sm-offset-1 col-xs-11">
                     <p class="text">Create websites that are:</p>
-                    <p class="text1 text-primary"><i class="fa fa-check-square-o" aria-hidden="true"></i> Up-to-date</p>
-                    <p class="text2 text-primary"><i class="fa fa-check-square-o" aria-hidden="true"></i> Responsive <i class="fa fa-mobile" aria-hidden="true"></i> <i class="fa fa-tablet" aria-hidden="true"></i> <i class="fa fa-desktop" aria-hidden="true"></i></p>
-                    <p class="text3 text-primary"><i class="fa fa-check-square-o" aria-hidden="true"></i> And of course awesome!</p>
+                    <p class="text1"><i class="fa fa-check-square-o" aria-hidden="true"></i> Up-to-date</p>
+                    <p class="text2"><i class="fa fa-check-square-o" aria-hidden="true"></i> Responsive <i class="fa fa-mobile" aria-hidden="true"></i> <i class="fa fa-tablet" aria-hidden="true"></i> <i class="fa fa-desktop" aria-hidden="true"></i></p>
+                    <p class="text3"><i class="fa fa-check-square-o" aria-hidden="true"></i> And of course awesome!</p>
                     <img src="images/portfolioIphone.png" alt="Portfolio on Smartphone" class="portfolioIphone hidden-xs hidden-sm">
                     <img src="images/portfolioTablet.png" alt="Portfolio on Tablet" class="portfolioTablet hidden-xs hidden-sm">
                 </div>
             </div>
         </div>
-        
         <div class="hidden-xs hiddenDiv"></div>
+        <div class="div20"></div>
     </section>
 
     <footer>
