--- a/skills.html
+++ b/skills.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CExo">
 
     <link rel="stylesheet" href="css/master.css">
 
@@ -106,9 +106,7 @@
             <div class="navbar-header">
                 <button type="button" id="navbarBg" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
-                    <span class="barColor icon-bar"></span>
-                    <span class="barColor icon-bar"></span>
-                    <span class="barColor icon-bar"></span>
+                    Menu
                 </button>
                 <a class="navbar-brand brandName" href="index.html">Thierry</a>
             </div>
@@ -116,13 +114,16 @@
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
-                    <li class="active"><a href="skills.html">Skills</a></li>
+                    <li class="active"><a id="active" href="skills.html">Skills</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="fr/index.html"><img class="flag" alt="French Flag" src="images/FrFlag.png"></a>
-                    <div class="div-7"></div>
-                    <a href="index.html"><img class="flag1" alt="English Flag" src="images/EngFlag.png"></a>
+                    <li>
+                        <a href="fr/index.html"><img class="flag" alt="French Flag" src="images/FrFlag.png"><span class="hidden-sm hidden-md hidden-lg"> Français</span></a>
+                    </li>
+                    <li>
+                        <a href="index.html"><img class="flag1" alt="English Flag" src="images/EngFlag.png"> <span class="hidden-sm hidden-md hidden-lg">English</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -138,7 +139,7 @@
         </div>
 
         <div class="container">
-            <h3>Web Development: </h3>
+            <h3 class="title2"><strong>Web Development:</strong></h3>
             <div class="row">
                 <div class="col-md-4 col-sm-6 text-center">
                     <img class="imgHtml skills animSkill" src="images/html5css3.png" alt="Skills HTML5 & CSS3">
@@ -193,16 +194,17 @@
                     </div>
                 </div>
             </div>
-            <h3>Languages: </h3>
+            <h3 class="title2"><strong>Languages:</strong></h3>
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <p>French:
                     <br>English:
-                    <br>Cambodian (Khmer):
+                    <br>Cambodian:
                     </p>
                 </div>
-                <div class="col-sm-9">
-                    <i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i>
+                <div class="col-sm-10">
+                    <i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i><i class="fa fa-star fa-3x spinner" aria-hidden="true"></i>
+                    <p class="textLang">Trilingual</p>
                 </div>
             </div>
             <div class="row">
@@ -211,7 +213,9 @@
                 </div>
             </div>
         </div>
+        <div class="div20"></div>
     </section>
+
     <footer>
     	<div class="container">
     		<div class="row">
