Some styles changed, description links changed

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     .profileContainer
     {
         background-color: #3BB9FF;
-        margin: 25px 0;
+        margin-top: 15px;
         color:white;
     }
 
@@ -284,7 +284,7 @@
                                 <li>
                                     <span class="textList">3rd in the French Cup in 2004</span>
                                 </li>
-                                <a href="images/medals.jpg"><img class="medals" src="images/medals.jpg" alt="Two Medals"></a>
+                                <a href="images/medals.jpg" title="Click on the image to see a bigger version"><img class="medals" src="images/medals.jpg" alt="Two Medals"></a>
                             </ul>
                         </li>
                             
