--- a/fr/about.html
+++ b/fr/about.html
@@ -23,7 +23,7 @@
     .profileContainer
     {
         background-color: #3BB9FF;
-        margin: 25px 0;
+        margin-top: 15px;
         color:white;
     }
 
@@ -179,7 +179,7 @@
                     </figure>
                 </div>
                 <div class="col-sm-offset-1 col-sm-pull-2 col-sm-9 profileIntro">
-                    <p>Développeur Web Full-Stack depuis plus d'un an, j'aime bien apprendre de nouvelle choses et me dépasser constamment.</p>
+                    <p>Développeur Web Full-Stack depuis plus d'un an, j'aime bien apprendre de nouvelles choses et me dépasser constamment.</p>
                     <p>Je recherche actuellement une entreprise pour un contrat de professionnalisation afin de continuer à me former dans le développement web (Bac+4).</p>
                     <p>Pour plus d'information, voici mon <em><a class="cv" href="CV_ThierryHor_fr.pdf" title="Mon CV au format PDF" target="_blank">CV <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></em></p>
                 </div>
@@ -289,7 +289,7 @@
                                 <li>
                                     <span class="textList">3ème de la coupe de France en 2004</span>
                                 </li>
-                                <img class="medals" src="../images/medals.jpg" alt="Two Medals">
+                                <a href="../images/medals.jpg" title="Cliquez sur l'image pour l'agrandir"><img class="medals" src="../images/medals.jpg" alt="Two Medals"></a>
                             </ul>
                         </li>
                             
