--- a/fr/index.html
+++ b/fr/index.html
@@ -111,7 +111,7 @@
         <div class="container-fluid">
             <div class="row">
                 <h1 class="textCenter title2"><strong>Thierry HOR</strong></h1>
-                <h2 class="textCenter title2"><strong>Développeur Web Full-Stack</strong> Trilingue</h2>
+                <h2 class="textCenter title2"><strong>Développeur Web Full-Stack Trilingue</strong></h2>
 
                 <div class="col-sm-offset-1 col-xs-11">
                     <p class="text">Créez des sites web qui sont:</p>
