--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -164,7 +164,7 @@
                 <div class="modal-body">
                     <div class="col-md-4">
                       <figure>
-                            <a href="https://github.com/webdevthierry/Projet-Integration" title="source code of the project" target="_blank">
+                            <a href="https://github.com/webdevthierry/Projet-Integration" title="Code source du projet" target="_blank">
                                 <img class="imgKwoon2 img-thumbnail" src="../images/kwoonIntegration.png" alt="Front-End Project">
                             </a>
                             <figcaption>
@@ -201,7 +201,7 @@
                 <div class="modal-body">
                     <div class="col-md-4">
                         <figure>
-                            <a href="https://codepen.io/webdevthierry/full/mPWMEr" title="Tribute page in Codepen" target="_blank">
+                            <a href="https://codepen.io/webdevthierry/full/mPWMEr" title="Page d'hommage sur Codepen" target="_blank">
                                 <img class="imgTribute2 img-thumbnail" src="../images/tributePage.jpg" alt="Tribute Page">
                             </a>
                             <figcaption>
