--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
                 <div class="modal-body">
                     <div class="col-md-4">
                       <figure>
-                            <a href="https://github.com/webdevthierry/Projet-Integration" title="source code of the project" target="_blank">
+                            <a href="https://github.com/webdevthierry/Projet-Integration" title="Source code of the project" target="_blank">
                                 <img class="imgKwoon2 img-thumbnail" src="images/kwoonIntegration.png" alt="Front-End Project">
                             </a>
                             <figcaption>
