New project added, some colors style changed, more browsers supports for animations in skills section

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,11 @@
 
     <style>
     
+    input[type='text'], input[type='email'], textarea[required]
+    {
+        color: #3BB9FF;
+    }
+
     .iconPad
     {
         padding-right:15px;
