--- a/fr/contact.html
+++ b/fr/contact.html
@@ -19,6 +19,11 @@
     <link rel="stylesheet" href="../css/master.css">
 
     <style>
+
+    input[type='text'], input[type='email'], textarea[required]
+    {
+        color: #3BB9FF;
+    }
     
     .iconPad
     {
