CV updated,new links to CV added, font-color for titles changed, Background for page 404 changed to winter edition

--- a/skills.html
+++ b/skills.html
@@ -273,6 +273,7 @@
     					<li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
     					<li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
     					<li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
+                        <li><a href="CV_ThierryHor_en.pdf" target="_blank" title="My CV"><i class="fa fa-2x fa-file-pdf-o" aria-hidden="true"></i></a></li>
     				</ul>
     			</div>
     		</div>
