--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 
         body
         {
-            background: url("images/beach.jpg") fixed no-repeat center;
+            background: url("images/winter.jpg") fixed no-repeat center;
             background-size: cover;
         }
 
