--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <style>
     
-    input[type='text'], input[type='email'], textarea[required]
+    input[type='text'], input[type='email'], textarea[required], .thumbs
     {
         color: #3BB9FF;
     }
@@ -28,11 +28,6 @@
     .iconPad
     {
         padding-right:15px;
-    }
-
-    .thumbs
-    {
-        color: blue;
     }
 
     </style>
@@ -125,6 +120,7 @@
                         <li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
                         <li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
                         <li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
+                        <li><a href="CV_ThierryHor_en.pdf" target="_blank" title="My CV"><i class="fa fa-2x fa-file-pdf-o" aria-hidden="true"></i></a></li>
                     </ul>
                 </div>
             </div>
