--- a/fr/contact.html
+++ b/fr/contact.html
@@ -20,7 +20,7 @@
 
     <style>
 
-    input[type='text'], input[type='email'], textarea[required]
+    input[type='text'], input[type='email'], textarea[required], .thumbs
     {
         color: #3BB9FF;
     }
@@ -28,11 +28,6 @@
     .iconPad
     {
         padding-right:15px;
-    }
-
-    .thumbs
-    {
-        color: blue;
     }
 
     </style>
@@ -82,7 +77,8 @@
             <div class="row">
                 <div class="col-sm-offset-1 col-sm-11">
                 <p><i class="smile fa fa-smile-o" aria-hidden="true"></i> Merci pour votre visite. <i class="smile fa fa-smile-o" aria-hidden="true"></i></p>
-                <p><i class="fa fa-thumbs-up thumbs" aria-hidden="true"></i> Mes compétences vous intéressent?</p>
+                <p><i class="fa fa-thumbs-up thumbs"></i>
+                    Mes compétences vous intéressent?</p>
                 <p>Disponible immédiatement sur Lyon.</p>
                 <p>Contactez moi si vous voulez me recruter ou juste laisser un message.</p>
                 </div>
@@ -126,6 +122,7 @@
                     <li><a href="https://fr.linkedin.com/in/horthierry/fr/" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
                     <li><a href="https://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
                     <li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
+                    <li><a href="CV_ThierryHor_fr.pdf" target="_blank" title="Mon CV"><i class="fa fa-2x fa-file-pdf-o" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </div>
