--- a/fr/index.html
+++ b/fr/index.html
@@ -138,6 +138,7 @@
                         <li><a href="https://www.linkedin.com/in/horthierry/fr/" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
                         <li><a href="https://www.viadeo.com/fr/profile/thierry.hor/fr" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
                         <li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
+                        <li><a href="CV_ThierryHor_fr.pdf" target="_blank" title="Mon CV"><i class="fa fa-2x fa-file-pdf-o" aria-hidden="true"></i></a></li>
                     </ul>
                 </div>
             </div>
