--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -183,7 +183,7 @@
                     <div class="col-md-4">
                       <figure>
                             <a href="https://github.com/webdevthierry/Projet-Integration" title="Code source du projet" target="_blank">
-                                <img class="imgModals img-thumbnail" src="../images/kwoonIntegration.png" alt="Front-End Project">
+                                <img class="imgModals img-thumbnail" src="../images/kwoonIntegration.png" alt="Projet Intégration">
                             </a>
                             <figcaption>
                                 <strong>Cliquez sur l'image pour voir le code source</strong>
@@ -320,6 +320,7 @@
                         <li><a href="https://fr.linkedin.com/in/horthierry/fr/" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
                         <li><a href="https://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
                         <li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
+                        <li><a href="CV_ThierryHor_fr.pdf" target="_blank" title="Mon CV"><i class="fa fa-2x fa-file-pdf-o" aria-hidden="true"></i></a></li>
                     </ul>
                 </div>
             </div>  
