Link to page 404 added in contact and readme.md updated

--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,11 @@
         padding-right:15px;
     }
 
+    .p404:link, .p404:visited
+    {
+        color: deepskyblue;
+    }
+
     </style>
 
 </head>
@@ -77,8 +82,8 @@
                 <div class="col-sm-offset-1 col-sm-11">
                 <p><i class="smile fa fa-smile-o" aria-hidden="true"></i> Thank you for visiting. <i class="smile fa fa-smile-o" aria-hidden="true"></i></p>
                 <p><i class="fa fa-thumbs-up thumbs" aria-hidden="true"></i> You like my work?</p>
-                <p>Available immediately in Lyon.</p>
-                <p>Contact me if you want to hire me or just say hi!</p>
+                <p>Available immediately in Lyon. Contact me if you want to hire me or just say hi!</p>
+                <p>PS: You can check my <a class="p404" href="404.html">page 404</a></p>
                 </div>
             </div>
 
