--- a/fr/about.html
+++ b/fr/about.html
@@ -84,13 +84,7 @@
         width: 170px;
     }
     
-    .link:link
-    {
-        color: gainsboro;
-        font-style: italic;
-    }
-    
-    .link:visited
+    .link:link, .link:visited
     {
         color: gainsboro;
         font-style: italic;
