--- a/fr/contact.html
+++ b/fr/contact.html
@@ -30,6 +30,11 @@
         padding-right:15px;
     }
 
+    .p404:link, .p404:visited
+    {
+        color: deepskyblue;
+    }
+
     </style>
 
 </head>
@@ -79,8 +84,8 @@
                 <p><i class="smile fa fa-smile-o" aria-hidden="true"></i> Merci pour votre visite. <i class="smile fa fa-smile-o" aria-hidden="true"></i></p>
                 <p><i class="fa fa-thumbs-up thumbs"></i>
                     Mes compétences vous intéressent?</p>
-                <p>Disponible immédiatement sur Lyon.</p>
-                <p>Contactez moi si vous voulez me recruter ou juste laisser un message.</p>
+                <p>Disponible immédiatement sur Lyon. Contactez moi si vous voulez me recruter ou juste laisser un message.</p>
+                <p>PS: Vous pouvez tester ma <a class="p404" href="../404.html">page 404</a></p>
                 </div>
             </div>
 
